// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputLabel ACT theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-1ss4zdm-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ACT_ET theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-5fsccc-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURA theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-1taagzj-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-7o83er-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-1vyou53-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;
